Fix layout issues with container elements

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,7 @@ body, html {
   background-color: #d7e0e0;
   height: 100%;
   font-family: sans-serif;
+  overflow: hidden;
 };
 
 section {
@@ -12,12 +13,11 @@ section {
 h1 {
   font-size: 36px;
   margin: 0;
-  padding-top: 20px;
 };
 
 h2 {
   font-size: 32px;
-  margin: 20px;
+  margin: 0px;
 }
 
 h3 {
@@ -46,13 +46,16 @@ td {
 
 main {
   display: flex;
+  padding: 20px;
+  max-height: 100%;
+  justify-content: space-evenly;
 }
 
 .activity-box {
   background-color: #ff9f1c;
   color: #6d3c0b;
   height: 350px;
-  width: 380px;
+  width: 400px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -99,31 +102,34 @@ main {
 .sleep-table-heading {
   background-color: #9f5edd;
 }
+
 .water-table-heading {
   background-color: #0fd3b2;
 }
 
 .stats-container {
-  width: 1200px;
-  height: 740px;
-  padding-left: 40px;
+  width: 1000px;
+  height: 700px;
+  padding: 20px;
 }
 
 .user-info-left {
-  width: 500px;
+  width: 400px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
 .user-card {
-  width: 380px;
-  height: 380px;
+  width: 360px;
+  height: 315px;
+  padding: 20px;
 }
 
 .daily-stats {
   display: flex;
+  margin-bottom: 24px;
 }
 
 .weekly-stats {
@@ -165,4 +171,13 @@ main {
 
 .text-under-number {
   margin: 0;
+}
+
+.weekly-table-container {
+  margin: 10px;
+}
+
+.daily-heading,
+.weekly-heading {
+  margin-bottom: 10px;
 }
